frontend/styles/cms_utils.scss
@use 'sass:math';
/* utilities/small components used in the cms */

/*  
  Shadows
*/

[class*=' shadow'],
[class^='shadow'] {
  --shadow-color: var(--shadow-blue);
  box-shadow: 7px 7px 0 var(--shadow-color);
}

@include media-breakpoint-down(md) {
  [class*=' md\:shadow'],
  [class^='md\:shadow'],
  [class*=' shadow-md'],
  [class^='shadow-md'] {
    box-shadow: none;
  }
}

.shadow-blue,
.shadow-md-blue,
.md\:shadow-blue {
  --shadow-color: var(--shadow-blue);
}

.shadow-gray,
.shadow-md-gray,
.md\:shadow-gray {
  --shadow-color: var(--shadow-gray);
}
.shadow-yellow,
.shadow-md-yellow,
.md\:shadow-yellow {
  --shadow-color: var(--shadow-yellow);
}

/*
  Backdrop with 50% height
*/

[class*=' backdrop'],
[class^='backdrop'] {
  position: relative;

  &::before {
    background: var(--backdrop-color);
    content: '';
    display: block;
    position: absolute;
    bottom: 50%;
    left: 0;
    right: 0;
    top: 0;
    z-index: -1;
  }

  &.backdrop-75::before {
    bottom: 25%;
  }
}

$backdrops: (
  'blue': 'blue-10',
  'blue-600': 'blue-600',
  'gray': 'gray-200',
  'gray-100': 'gray-100',
  'yellow': 'yellow-100',
  'yellow-200': 'yellow-200',
  'body-tertiary': 'tertiary-bg'
);

@each $name, $value in $backdrops {
  .backdrop-#{$name} {
    --backdrop-color: var(--bs-#{$value});
  }
}

/*
  Font utilities
*/

.action-link {
  transition: font-weight 0.3s ease;

  &:hover {
    text-decoration: none;
    font-weight: 600;
  }
}

/*
  spacing utilities 
*/

@each $value in (10, 20) {
  .z-index-#{$value} {
    z-index: $value !important;
  }
}

.tight-margin {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  ul {
    &:first-child {
      margin-top: 0;
    }

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.min-vh-md-100 {
  @include media-breakpoint-up(md) {
    min-height: 100vh;
  }
}

.reveal-cutoff {
  .reveal-inner {
    position: relative;
    transition: max-height 0.5s ease-out;
    overflow: hidden;

    &::after {
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      height: 12rem;
      max-height: 50%;
      content: '';
      background: linear-gradient(
        to bottom,
        transparent,
        var(--reveal-color) 95%
      );
      z-index: 1;
      transition: opacity 0.5s ease-out;
      pointer-events: none;
    }
  }

  > .reveal-show {
    display: flex;
    justify-content: center;
    z-index: 2;
    transition: opacity 0.5s ease-out;
  }

  &.transitioning {
    .reveal-inner {
      max-height: 125vh !important;
    }

    > .reveal-show,
    .reveal-inner::after {
      opacity: 0;
    }
  }

  &.revealed {
    .reveal-inner {
      overflow-y: unset;
      max-height: none !important;
    }

    .reveal-show,
    .reveal-inner::after {
      display: none;
    }
  }
}

@include media-breakpoint-up(md) {
  .text-columns-md-2 {
    column-count: 2;
    column-gap: 2rem;
  }
}

.bordered-section {
  margin-top: 0.65em;
  border-width: 4px;

  .bordered-section-headline {
    margin-top: -0.65em;
    margin-bottom: 0;
    margin-left: 1rem;
    margin-right: 1rem;
    text-align: center;
  }
}

